--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.11.2",
     "@azure/msal-react": "^1.0.0-alpha.6",
+    "@devexpress/dx-react-grid": "^2.7.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.21",
     "@material-ui/icons": "^4.11.2",
@@ -12,6 +13,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2"
   },
@@ -42,6 +44,5 @@
       "last 1 safari version",
       "ie 11"
     ]
-  },
-  "devDependencies": {}
+  }
 }
