--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
 		"node-fetch": "^2.6.1",
 		"passport": "^0.4.1",
 		"passport-azure-ad": "^4.3.0",
+		"tedious": "^11.0.5",
 		"xml-js": "^1.6.11",
 		"xmldom": "^0.4.0"
 	}
