--- a/.github/workflows/main_func-xb2hm5z2a4pvy.yml
+++ b/.github/workflows/main_func-xb2hm5z2a4pvy.yml
@@ -28,7 +28,7 @@ jobs:
     - name: 'Resolve Project Dependencies Using Npm'
       shell: bash
       run: |
-        pushd './cient/${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        pushd '../cient/${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
         npm install
         npm run build --if-present
         npm run test --if-present
