--- a/.github/workflows/main_func-xb2hm5z2a4pvy.yml
+++ b/.github/workflows/main_func-xb2hm5z2a4pvy.yml
@@ -40,5 +40,5 @@ jobs:
       with:
         app-name: 'func-xb2hm5z2a4pvy'
         slot-name: 'production'
-        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        package: './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}''
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_d7ba4aa6feff4cb786652a4c28b69b60 }}
