added PS deploy script & change github action web app deploy task

--- a/.github/workflows/main_func-xb2hm5z2a4pvy.yml
+++ b/.github/workflows/main_func-xb2hm5z2a4pvy.yml
@@ -35,8 +35,7 @@ jobs:
         popd
 
     - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
-      id: fa
+      uses: Azure/webapps-deploy@v2 #Azure/functions-action@v1
       with:
         app-name: 'func-xb2hm5z2a4pvy'
         slot-name: 'production'
