--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Node.js Express Web App to Linux on Azure
-# Build a Node.js Express app and deploy it to Azure as a Linux web app.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - main
 
@@ -11,7 +6,18 @@ variables:
   environmentName: 'dev'
   vmImageName: 'ubuntu-latest'
   location: 'australiaeast'
+  tenantName: 'kainiindustries.net'
   resourceGroupName: 'student-app-2-rg'
+  aadAdminObjectId: '57963f10-818b-406d-a2f6-6e758d86e259'
+  aadAdminDisplayName: 'aad-dbadmin'
+  databaseName: 'students'
+  sqlAdminUserName: 'dbadmin'
+  sqlAdminPassword: 'M1cr0soft1234567890'
+  tenantId: '3d49be6f-6e38-404b-bbd4-f61c1a2d25bf'
+  authority: https://login.microsoftonline.com/$(tenantId)
+  reactClientId: '1c0ddb7a-f862-455d-9e4f-8c64fc4cd489'
+  apiClientId: '038554c4-271d-4c8f-ae72-56d3d23db9fc'
+  apiClientSecret: 'NX8F0H7I1Z26g5Cwevg6d~42~7H._xiQpB'
 
 stages:
 - stage: Build
@@ -23,63 +29,89 @@ stages:
       vmImage: $(vmImageName)
 
     steps:
-    - task: NodeTool@0
+    - task: CopyFiles@2
+      displayName: 'copy React files to staging directory'
       inputs:
-        versionSpec: '10.x'
-      displayName: 'Install Node.js'
-
-    - script: |
-        cd ./client/src
-        npm install
-        npm run build --if-present
-        npm run test --if-present
-      displayName: 'npm install, build and test'
+        SourceFolder: /client
+        Contents: '**/*'
+        TargetFolder: $(Build.ArtifactStagingDirectory)/react
+        CleanTargetFolder: true
 
     - task: ArchiveFiles@2
-      displayName: 'Archive files'
+      displayName: 'create archive for function app'
       inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-        includeRootFolder: false
+        archiveFile: $(Build.ArtifactStagingDirectory)/function-$(Build.BuildId).zip
         archiveType: zip
-        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
         replaceExistingArchive: true
+        includeRootFolder: false
+        rootFolderOrFile: /server
+
+    - task: CopyFiles@2
+      displayName: 'copy function app files to staging directory'
+      inputs:
+        SourceFolder: ./server
+        Contents: '**/*'
+        TargetFolder: $(Build.ArtifactStagingDirectory)/function
 
     - task: Bash@3
-      displayName: 'Install Bicep'
+      displayName: 'compile bicep to ARM'
       inputs:
         targetType: inline
         script: |
-          curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
-          chmod +x ./bicep
-          ./bicep build $(System.DefaultWorkingDirectory)/iac/main.bicep
+          az bicep build $(System.DefaultWorkingDirectory)/iac/main.bicep
 
     - task: CopyFiles@2
-      displayName: 'Copy ARM Template files to Staging directory'
+      displayName: 'copy ARM template files to staging directory'
       inputs:
         SourceFolder: ./iac
         Contents: main.json
         TargetFolder: $(Build.ArtifactStagingDirectory)/templates
     
     - task: PublishBuildArtifacts@1
-      displayName: 'Publish ARM Templates'
+      displayName: 'publish ARM templates'
       inputs:
         PathtoPublish: $(Build.ArtifactStagingDirectory)/templates
-        ArtifactName: templates
+        ArtifactName: template
   
     - task: PublishBuildArtifacts@1
-      displayName: 'Publish function archive'
+      displayName: 'publish function archive'
       inputs:
-        PathtoPublish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        PathtoPublish: $(Build.ArtifactStagingDirectory)/function
         ArtifactName: function
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'publish react build files'
+      inputs:
+        PathtoPublish: $(Build.ArtifactStagingDirectory)/react
+        ArtifactName: react
 
 - stage: Deploy
   displayName: Deploy stage
   dependsOn: Build
   condition: succeeded()
   jobs:
-    - job: "BicepConfigure"
+    - job: DeployInfrastructure
       steps:
+        - task: DownloadPipelineArtifact@2
+          displayName: 'download arm template artifacts'
+          inputs:
+            artifactName: arm-template
+            targetPath: $(Build.SourcesDirectory)/artifacts
+
+        - task: DownloadPipelineArtifact@2
+          displayName: 'download function artifacts'
+          inputs:
+            artifactName: function
+            targetPath: $(Build.SourcesDirectory)/artifacts
+
+        - task: DownloadPipelineArtifact@2
+          displayName: 'download react artifatcs'
+          inputs:
+            artifactName: react
+            targetPath: $(Build.SourcesDirectory)/artifacts
+        
         - task: AzureResourceManagerTemplateDeployment@3
+          displayName: 'deploy infrastructure'
           inputs:
             deploymentScope: 'Resource Group'
             azureResourceManagerConnection: $(azureSubscription)
@@ -87,25 +119,128 @@ stages:
             resourceGroupName: $(resourceGroupName)
             location: $(location)
             templateLocation: 'Linked artifact'
-            csmFile: $(Pipeline.Workspace)/templates/main.json
+            csmFile: $(Pipeline.Workspace)/artifacts/template/main.json
+            overrideParameters: |
+              -dbName $(databaseName) -sqlAdminUserName $(sqlAdminUserName) -sqlAdminPassword $(sqlAdminPassword)
             deploymentMode: Incremental
-            deploymentOutputs: deploymentOutput
+            deploymentOutputs: infraDeployment
+            deploymentName: "infraDeployment-$[counter(format('{0:yyyyMMdd}', pipeline.startTime), 100)]"
+        
+        - task: AzureCLI@2
+          displayName: 'enable azure storage static website'
+          inputs:
+            scriptType: pscore
+            scriptLocation: inlineScript
+            azureSubscription: $(azureSubscription)
+            inlineScript: |
+              # enable Azure storage static web app feature 
+              az storage blob service-properties update \
+              --account-name $(infraDeployment.Outputs.webStorageAccountName.value) \
+              --static-website \
+              --index-document index.html \
+              --error-document error.html
 
-    - deployment: Deploy
-      displayName: Deploy
-      environment: $(environmentName)
-      pool:
-        vmImage: $(vmImageName)
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            - task: AzureFunctionApp@1
-              displayName: 'Deploy Azure Function'
-              inputs:
-                azureSubscription: $(azureSubscription)
-                appType: functionAppLinux
-                appName: $(deploymentOutput.functionName)
-                runtimeStack: 'NODE|12'
-                package: $(Pipeline.Workspace)/function/$(Build.BuildId).zip
-                startUpCommand: 'npm run start'
+        - task: AzureCLI@2
+          displayName: 'enable Azure sql server AAD admin'
+          inputs:
+            scriptType: pscore
+            scriptLocation: inlineScript
+            azureSubscription: $(azureSubscription)
+            inlineScript: |
+              # enable Azure SQL server AAD admin account
+              az sql server ad-admin create \
+              --server $(infraDeployment.Outputs.sqlServerName.value) \
+              --display-name $(aadAdminDisplayName) \
+              --object-id $(aadAdminObjectId) \
+              --resource-group $(resourceGroupName)
+
+        - task: AzureCLI@2
+          displayName: 'patch function config files'
+          inputs:
+            azureSubscription: $(azureSubscription)
+            scriptType: pscore
+            scriptLocation: inlineScript
+            inlineScript: |
+              # patch auth.json
+              $authConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json | ConvertFrom-Json
+              $authConfig.tenantName=$(tenantName)
+              $authConfig.tenantID=$(tenantId)
+              $authConfig.clientID=$(apiClientId)
+              $authConfig.clientSecret=$(apiClientSecret)
+              $authConfig.audience=$(apiClientId)
+              $authConfig.storageAccountName=$(infraDeployment.Outputs.docsStorageAccountName.value)
+              $authConfig | Set-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json -Force
+
+              # patch db.json
+              $dbConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/db.json | ConvertFrom-Json
+              $dbConfig.serverName = $(infraDeployment.Outputs.sqlServerName.value)
+              $dbConfig.dbName = $(infraDeployment.Outputs.sqlDatabaseName.value)
+              $dbConfig | Set-Content -Path $(Pipeline.Workspace)/artifacts/function/db.json -Force
+
+        - task: AzureFunctionApp@1
+          displayName: 'deploy function'
+          inputs:
+            azureSubscription: $(azureSubscription)
+            appType: functionAppLinux
+            appName: $(infraDeployment.functionName.value)
+            runtimeStack: 'NODE|12'
+            package: $(Pipeline.Workspace)/artifacts/function/$(Build.BuildId).zip
+            startUpCommand: 'npm run start'
+            resourceGroupName: $(resourceGroupName)
+
+        - task: NodeTool@0
+          inputs:
+            versionSpec: '10.x'
+          displayName: 'Install Node.js'
+    
+        - task: AzureCLI@2
+          displayName: 'build react app'
+          inputs:
+            azureSubscription: $(azureSubscription)
+            scriptType: pscore
+            scriptLocation: inlineScript
+            inlineScript: |
+              # create .env.prod file
+              cd $(Pipeline.Workspace)/artifacts/react #/src
+              New-Item -Name '.env.prod' -Path . -ItemType File
+
+              $functionName = $(infraDeployment.Outputs.functionName.value)
+              $apiUri = https://$($functionName).azurewebsites.net/api"
+              $apiClientUri = "api://$(apiClientId)"
+
+              $webStorageAccount = az storage account  show --resource-group $(resourceGroupName) --name $(infraDeployment.Outputs.webStorageAccountName.value) | ConvertFrom-Json
+              $storageKeys = az storage account keys list --resource-group $(resourceGroupName) --name $(infraDeployment.Outputs.webStorageAccountName.value) | ConvertFrom-Json
+              
+              # patch .env.prod file
+              $envVars = @(
+                "REACT_APP_CLIENT_ID=$(reactClientId)",
+                "REACT_APP_AUTHORITY=$(authority)",
+                "BLOB_READ_SCOPE="$apiClientUri/storage.blob.read",
+                "SQL_READ_WRITE_SCOPE="$apiClientUri/sql.db.readwrite",
+                "REACT_APP_API_ENDPOINT=$apiUri,
+                "REACT_APP_REDIRECT_URI=$apiUri",
+                "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
+                "REACT_APP_REDIRECT_URI=$($webStorageAccount.primaryEndpoints.web)"
+                "REACT_APP_POST_LOGOUT_REDIRECT_URI=$($webStorageAccount.primaryEndpoints.web)"
+              )
+
+              # add env vars to ./.env file
+              $envVars | Foreach-Object {
+                Add-Content -Value $_ -Path ./.env.prod 
+              }
+            
+              # build react app
+              npm install env-cmd
+              npm install
+              npm run build:prod
+              npm run test --if-present
+
+        - task: AzureFileCopy@4
+          displayName: 'copy react files to static web storage account'
+          inputs:
+            azureSubscription: $(azureSubscription)
+            ContainerName: '$web'
+            SourcePath: $(Pipeline.Workspace)/artifacts/react/build
+            Destination: AzureBlob
+            resourceGroup: $(resourceGroupName)
+            storage: $(infraDeployment.Outputs.webStorageAccountName.value)
