--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
     - task: CopyFiles@2
       displayName: 'copy React files to staging directory'
       inputs:
-        Contents: '$(Build.SourcesDirectory)/client/**'
+        Contents: '$(System.DefaultWorkingDirectory)/client/**'
         TargetFolder: $(Build.ArtifactStagingDirectory)/react
         CleanTargetFolder: true
 
@@ -43,12 +43,12 @@ stages:
         archiveType: zip
         replaceExistingArchive: true
         includeRootFolder: false
-        rootFolderOrFile: $(Build.SourcesDirectory)/server
+        rootFolderOrFile: $(System.DefaultWorkingDirectory)/server
 
     - task: CopyFiles@2
       displayName: 'copy function app files to staging directory'
       inputs:
-        SourceFolder: $(Build.SourcesDirectory)/server
+        SourceFolder: $(System.DefaultWorkingDirectory)/server
         Contents: '**/*'
         TargetFolder: $(Build.ArtifactStagingDirectory)/function
 
@@ -94,7 +94,7 @@ stages:
         - task: DownloadPipelineArtifact@2
           displayName: 'download arm template artifacts'
           inputs:
-            artifactName: arm-template
+            artifactName: template
             targetPath: $(Build.SourcesDirectory)/artifacts
 
         - task: DownloadPipelineArtifact@2
