--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,8 +63,8 @@ stages:
     - task: CopyFiles@2
       displayName: 'copy ARM template files to staging directory'
       inputs:
-        SourceFolder: (Build.ArtifactStagingDirectory)/iac
-        Contents: '*.json'
+        SourceFolder: (System.DefaultWorkingDirectory)/iac
+        Contents: $(bicepFileName).json
         TargetFolder: $(Build.ArtifactStagingDirectory)/template
     
     - task: PublishBuildArtifacts@1
