updated pipeline deployment

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -157,18 +157,18 @@ stages:
             inlineScript: |
               # patch auth.json
               $authConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json | ConvertFrom-Json
-              $authConfig.tenantName=$(tenantName)
-              $authConfig.tenantID=$(tenantId)
-              $authConfig.clientID=$(apiClientId)
-              $authConfig.clientSecret=$(apiClientSecret)
-              $authConfig.audience=$(apiClientId)
-              $authConfig.storageAccountName=$(infraDeployment.docsStorageAccountName.value)
-              $authConfig | Set-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json -Force
+              $authConfig.tenantName = "$(tenantName)"
+              $authConfig.tenantID = "$(tenantId)"
+              $authConfig.clientID = "$(apiClientId)"
+              $authConfig.clientSecret = "$(apiClientSecret)"
+              $authConfig.audience = "$(apiClientId)"
+              $authConfig.storageAccountName = "$(infraDeployment.docsStorageAccountName.value)"
+              $authConfig | Set-Content -Path "$(Pipeline.Workspace)/artifacts/function/auth.json" -Force
 
               # patch db.json
               $dbConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/db.json | ConvertFrom-Json
-              $dbConfig.serverName = $(infraDeployment.sqlServerName.value)
-              $dbConfig.dbName = $(infraDeployment.sqlDatabaseName.value)
+              $dbConfig.serverName="$(infraDeployment.sqlServerName.value)"
+              $dbConfig.dbName = "$(infraDeployment.sqlDatabaseName.value)"
               $dbConfig | Set-Content -Path $(Pipeline.Workspace)/artifacts/function/db.json -Force
 
         - task: AzureFunctionApp@1
