--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -157,12 +157,12 @@ stages:
             inlineScript: |
               # patch auth.json
               $authConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json | ConvertFrom-Json
-              $authConfig.tenantName = "$(tenantName)"
-              $authConfig.tenantID = "$(tenantId)"
-              $authConfig.clientID = "$(apiClientId)"
-              $authConfig.clientSecret = "$(apiClientSecret)"
-              $authConfig.audience = "$(apiClientId)"
-              $authConfig.storageAccountName = "$(infraDeployment.docsStorageAccountName.value)"
+              $authConfig.tenantName = $(tenantName)
+              $authConfig.tenantID = $(tenantId)
+              $authConfig.clientID = $(apiClientId)
+              $authConfig.clientSecret = $(apiClientSecret)
+              $authConfig.audience = $(apiClientId)
+              $authConfig.storageAccountName = $(infraDeployment.docsStorageAccountName.value)
               $authConfig | Set-Content -Path "$(Pipeline.Workspace)/artifacts/function/auth.json" -Force
 
               # patch db.json
