--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -158,7 +158,7 @@ stages:
               # patch auth.json
               $authConfig = Get-Content -Path $(Pipeline.Workspace)/artifacts/function/auth.json | ConvertFrom-Json
               $authConfig.tenantName = "$(tenantName)"
-              $authConfig.tenantID = $(tenantId)
+              $authConfig.tenantID = "$(tenantId)"
               $authConfig.clientID = $(apiClientId)
               $authConfig.clientSecret = $(apiClientSecret)
               $authConfig.audience = $(apiClientId)
