updated pipeline deployment

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,13 +69,13 @@ stages:
         ArtifactName: template
   
     - task: PublishBuildArtifacts@1
-      displayName: 'publish function archive'
+      displayName: 'publish function code'
       inputs:
         PathtoPublish: $(Build.ArtifactStagingDirectory)/function
         ArtifactName: function
 
     - task: PublishBuildArtifacts@1
-      displayName: 'publish react build files'
+      displayName: 'publish react code'
       inputs:
         PathtoPublish: $(Build.ArtifactStagingDirectory)/react
         ArtifactName: react
@@ -233,8 +233,8 @@ stages:
               $envVars = @(
                 "REACT_APP_CLIENT_ID=$(reactClientId)",
                 "REACT_APP_AUTHORITY=$(authority)",
-                "BLOB_READ_SCOPE="$apiClientUri/storage.blob.read",
-                "SQL_READ_WRITE_SCOPE="$apiClientUri/sql.db.readwrite",
+                "BLOB_READ_SCOPE="$($apiClientUri)/storage.blob.read",
+                "SQL_READ_WRITE_SCOPE="$($apiClientUri)/sql.db.readwrite",
                 "REACT_APP_API_ENDPOINT=$apiUri,
                 "REACT_APP_REDIRECT_URI=$apiUri",
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
