--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -233,8 +233,8 @@ stages:
               $envVars = @(
                 "REACT_APP_CLIENT_ID=$(reactClientId)",
                 "REACT_APP_AUTHORITY=$(authority)",
-                "BLOB_READ_SCOPE="$($apiClientUri)/storage.blob.read",
-                "SQL_READ_WRITE_SCOPE="$($apiClientUri)/sql.db.readwrite",
+                "BLOB_READ_SCOPE=$($apiClientUri)/storage.blob.read",
+                "SQL_READ_WRITE_SCOPE=$($apiClientUri)/sql.db.readwrite",
                 "REACT_APP_API_ENDPOINT=$apiUri,
                 "REACT_APP_REDIRECT_URI=$apiUri",
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
@@ -242,7 +242,7 @@ stages:
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$($webStorageAccount.primaryEndpoints.web)"
               )
 
-              # add env vars to ./.env file
+              # add env vars to ./.env.prod file
               $envVars | Foreach-Object {
                 Add-Content -Value $_ -Path ./.env.prod 
               }
