--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -235,7 +235,7 @@ stages:
                 "REACT_APP_AUTHORITY=$(authority)",
                 "BLOB_READ_SCOPE=$($apiClientUri)/storage.blob.read",
                 "SQL_READ_WRITE_SCOPE=$($apiClientUri)/sql.db.readwrite",
-                "REACT_APP_API_ENDPOINT=$apiUri,
+                "REACT_APP_API_ENDPOINT=$apiUri",
                 "REACT_APP_REDIRECT_URI=$apiUri",
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
                 "REACT_APP_REDIRECT_URI=$($webStorageAccount.primaryEndpoints.web)"
