added missing double-quote

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -238,7 +238,7 @@ stages:
                 "REACT_APP_API_ENDPOINT=$apiUri",
                 "REACT_APP_REDIRECT_URI=$apiUri",
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
-                "REACT_APP_REDIRECT_URI"=$(infraDeployment.webStorageEndpoint.value),
+                REACT_APP_REDIRECT_URI=$(infraDeployment.webStorageEndpoint.value),
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI"=$(infraDeployment.webStorageEndpoint.value)
               )
 
