--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -239,7 +239,7 @@ stages:
                 "REACT_APP_REDIRECT_URI=$apiUri",
                 "REACT_APP_POST_LOGOUT_REDIRECT_URI=$apiUri",
                 REACT_APP_REDIRECT_URI=$(infraDeployment.webStorageEndpoint.value),
-                "REACT_APP_POST_LOGOUT_REDIRECT_URI"=$(infraDeployment.webStorageEndpoint.value)
+                REACT_APP_POST_LOGOUT_REDIRECT_URI=$(infraDeployment.webStorageEndpoint.value)
               )
 
               # add env vars to ./.env.prod file
