added function to remove trailingremove trailing slash

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -223,7 +223,7 @@ stages:
               New-Item -Name '.env.prod' -Path . -ItemType File
 
               $functionName = $(infraDeployment.functionName.value)
-              $apiUri = "https://$($functionName).azurewebsites.net/api"
+              $apiUri = "https://$functionName.azurewebsites.net/api"
               $apiClientUri = "api://$(apiClientId)"
 
               $webStorageAccount = az storage account  show --resource-group $(resourceGroupName) --name $(infraDeployment.webStorageAccountName.value) | ConvertFrom-Json
